2003-08-19  Harry Lu  <harry.lu@sun.com>

	** For #45348

	* mail-display.c (mail_display_render): Change "%P" to "%p" so
	that strftime() can work under solaris.

2003-08-13  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>

	* e-searching-tokenizer.c (searcher_next_token): Fix for 45818 ( i18n
	mail messages search only produces '[?]'). Now multibyte character
	selection works correctly. But due to associated gtkhtml bug, the find
	button functionallity for multibyte characters is broken.

2003-08-05  Not Zed  <NotZed@Ximian.com>

	** See bug #32732

	* message-list.c (mail_regen_list): use thread_new.

	* mail-local.c (reconfigure_response): use thread_new.

	* mail-display.c (stream_write_or_redisplay_when_loaded): use
	thread_new.

	* mail-config.c (mail_config_check_service): use thread_new rather
	than queue.

	* mail-callbacks.c (view_msg): change to use mail_get_messages(),
	fixes FIXME.
	(do_view_messages): handle get_messages callback.
	(do_view_message): removed.

	* mail-ops.c (mail_get_folderinfo): Use a new thread thread
	semantic.
	(mail_save_part): "
	(mail_store_set_offline): "
	(mail_sync_folder): use queued_slow thread queue.
	(mail_expunge_folder): "
	(mail_empty_trash): "

	** See bug #47224.  Hook onto clicked rather than button_pressed,
	so that dnd works.
	
	* mail-display.c (inline_toggle): toggle a part inline.
	(button_press): change back to only handle button clicked events,
	renamed to inline_button_clicked.
	(do_attachment_header): hook onto clicked rather than
	button_press_event, and move key_press_event to
	inline_button_pressed.
	(do_signature): Same.
	(inline_button_pressed): handle inline button key press event
	explicitly.

2003-07-29  Not Zed  <NotZed@Ximian.com>

	* mail-folder-cache.c (mail_note_store): add a CamelOperation for
	overriding status handler.

	* mail-send-recv.c (receive_update_got_store): Pass our own cancel
	handle to get_folderinfo and mail_note_store.